# elastic_notebook_slim

./: .bumpversion.cfg  .gitignore  README.md  requirements.txt  setup.cfg
.github/workflows/: publish.yml  release.yml
elastic/: elastic_notebook.py
elastic/core/notebook/: checkpoint.py
