[metadata]
name = elastic-notebook
version = 0.0.1
authors = Zhaoheng Li, Yuzhou Mao, Pranav Gor, Hui Yu, Rahul Prablu, Yongjoo Park
author_email = zl20@illinois.edu
description = Intelligent scaling of Python workload using cloud storage
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/illinoisdata/elastic-notebook
project_urls =
    Bug Tracker = https://github.com/illinoisdata/elastic-notebook/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = elastic
python_requires = >=3.6
install_requires =
    dill
    ipykernel
    ipython
    lightgbm
    matplotlib
    networkx
    numpy
    pandas
    Pympler
    scipy
    seaborn
    torch
    xxhash

[options.packages.find]
where = .

[options.extras_require]
dev =
    black
    flake8
    isort
    mypy
